// Jinro backend schema (DBML)
// 方針: 生 SQL リポジトリ向け。第3正規形（3NF）を基本とする。
// - 他テーブルから JOIN で一意に導出できる属性は持たない
//   例: avatar_id があれば user_id は avatars.user_id から取得
// - ゲーム開始時点のスナップショット（名称・設定など）は「その時点の事実」として残す
//   （現在の avatars / channels 行と一致し続ける前提ではない）

Project jinro {
  database_type: "PostgreSQL"
  Note: '''
    開発用 DB: docker compose の postgres（DATABASE_URL）
    ID はアプリ側で UUID 生成（randomUUID）
    Access JWT は DB に保存しない
    正規化: 3NF。導出可能カラムは置かない
  '''
}

// ---- Enums ----

Enum game_phase {
  PRE_GAME
  DAY
  NIGHT
  POST_GAME
}

Enum channel_entry_status {
  active
  cancelled
  consumed
}

Enum message_type {
  NORMAL
  WEREWOLF
  SYSTEM
  SPECTATOR
  SHARED
}

Enum player_role {
  VILLAGER
  WEREWOLF
  FORTUNE_TELLER
  MEDIUM
  HUNTER
  POSSESSED
  FOX
  TRAITOR
  SHARER
  FANATIC
}

Enum player_status {
  ALIVE
  DEAD
  NON_PLAYER
}

// email purpose はコード上ハイフン付き
// （register | email-change | password-reset | unlock）のため varchar で保持

// ---- Tables ----

Table users {
  id uuid [pk, note: "UserId"]
  email varchar [null, note: "ゲストは null"]
  password_hash text [null, note: "bcrypt。ゲストは null。平文は保存しない"]
  display_name varchar [not null]
  is_guest boolean [not null, default: false]
  email_verified_at timestamptz [null]
  locked_at timestamptz [null]
  login_attempts int [not null, default: 0, note: "上限 MAX_LOGIN_ATTEMPTS=5"]
  deleted_at timestamptz [null, note: "論理削除"]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  Note: "公開型 User に password_hash は含めない（UserRecord のみ）"
}

Table avatars {
  id uuid [pk, note: "AvatarId"]
  user_id uuid [not null, ref: > users.id]
  name varchar [not null]
  image_url text [not null, note: "S3 公開 URL。差し替えでも URL は変えない"]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  Note: "物理削除。上限は登録済み10 / ゲスト1（アプリ制約）"
}

Table channels {
  id uuid [pk, note: "ChannelId"]
  admin_id uuid [not null, ref: > avatars.id, note: "管理者アバター。admin の user は avatars.user_id で取得"]
  title varchar(100) [not null]
  description varchar(500) [not null, default: ""]
  settings jsonb [not null, note: "ChannelSettings: passwordHash, passwordEnabled, guestAllowed"]
  game_settings jsonb [not null, note: "GameSettings: roles, phaseDurations"]
  entry_processing boolean [not null, default: false, note: "エントリー処理の排他ロック"]
  deleted_at timestamptz [null, note: "論理削除"]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  Note: "admin_user_id は置かない（admin_id → avatars.user_id）"
}

Table channel_participants {
  id uuid [pk, note: "ChannelParticipantId"]
  channel_id uuid [not null, ref: > channels.id]
  avatar_id uuid [not null, ref: > avatars.id]
  deleted_at timestamptz [null, note: "退出・キック時"]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  Note: '''
    user_id は置かない（avatar_id → avatars.user_id）
    アクティブ時は (channel_id, avatar_id) 一意
    「同一 user の多重参加禁止」は avatars 経由でアプリまたは制約で担保
  '''
}

Table channel_entries {
  id uuid [pk, note: "ChannelEntryId"]
  participant_id uuid [not null, ref: > channel_participants.id]
  status channel_entry_status [not null, default: "active"]
  deleted_at timestamptz [null, note: "取消・消費時"]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  Note: '''
    channel_id / user_id / avatar_id は置かない
    （いずれも participant_id → channel_participants → avatars で取得）
    status=active のとき participant_id 一意
  '''
}

Table blocked_users {
  id uuid [pk, note: "BlockedUserId"]
  channel_id uuid [not null, ref: > channels.id]
  avatar_id uuid [not null, ref: > avatars.id, note: "ブロック対象アバター。user は avatars.user_id で取得"]
  deleted_at timestamptz [null, note: "解除時"]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  Note: '''
    user_id は置かない（avatar_id → avatars.user_id）
    アクティブ時は (channel_id, avatar_id) 一意
  '''
}

Table games {
  id uuid [pk, note: "GameId"]
  channel_id uuid [not null, ref: > channels.id]
  description text [not null, default: "", note: "開始時点のスナップショット（チャンネル現行値とは独立）"]
  game_settings jsonb [not null, note: "開始時点の GameSettings スナップショット"]
  logs jsonb [not null, default: "[]", note: "GameLogEntry[]"]
  processing boolean [not null, default: false]
  phase_info jsonb [not null, note: "GamePhaseInfo: phase, day, changedAt, nextPhaseAt"]
  started_at timestamptz [not null]
  ended_at timestamptz [null]
  deleted_at timestamptz [null]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  Note: "description / game_settings は開始時の事実。channels からの導出ではない"
}

Table players {
  id uuid [pk, note: "PlayerId"]
  game_id uuid [not null, ref: > games.id]
  avatar_id uuid [not null, ref: > avatars.id]
  name varchar [not null, note: "開始時点の表示名スナップショット"]
  picture_url text [not null, note: "開始時点の画像 URL スナップショット"]
  role player_role [not null]
  status player_status [not null, default: "ALIVE"]
  deleted_at timestamptz [null]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  Note: '''
    user_id は置かない（avatar_id → avatars.user_id）
    name / picture_url は開始時の事実（後からアバターを変えてもゲーム内表示は固定）
  '''
}

Table messages {
  id uuid [pk, note: "MessageId"]
  room_id uuid [not null, note: "ChannelId または GameId（ポリモーフィック。厳密 FK なし）"]
  sender_id varchar [not null, note: "participantId / playerId / 'system'"]
  content varchar(1000) [not null]
  message_type message_type [not null]
  reply_to_message_id uuid [null, ref: > messages.id]
  deleted_at timestamptz [null]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  Note: "一覧は (room_id, message_type, created_at) で絞る想定"
}

Table refresh_tokens {
  id uuid [pk, note: "RefreshTokenId。opaque token の id 部分"]
  user_id uuid [not null, ref: > users.id]
  token_hash text [not null, note: "平文は保存しない"]
  expires_at timestamptz [not null, note: "TTL 30日"]
  revoked_at timestamptz [null]
  replaced_by_token_id uuid [null, ref: > refresh_tokens.id]
  created_at timestamptz [not null, default: `now()`]

  Note: "論理削除カラムなし。失効は revoked_at"
}

Table email_codes {
  id uuid [pk, note: "EmailCodeId"]
  email varchar [not null, note: "検証対象アドレス（email-change 時は変更先。users.email とは限らない）"]
  user_id uuid [null, ref: > users.id, note: "紐づけ可能なときのみ"]
  purpose varchar [not null, note: "register | email-change | password-reset | unlock"]
  code_hash text [not null, note: "平文コードは保存しない"]
  expires_at timestamptz [not null]
  used_at timestamptz [null]
  attempt_count int [not null, default: 0]
  created_at timestamptz [not null, default: `now()`]

  Note: "email は検証対象そのものなので user から導出せず保持"
}

Table email_tokens {
  id uuid [pk, note: "EmailTokenId。opaque token の id 部分"]
  email varchar [not null, note: "アクション対象アドレス（users.email とは限らない）"]
  user_id uuid [null, ref: > users.id, note: "紐づけ可能なときのみ"]
  purpose varchar [not null, note: "register | email-change | password-reset（unlock なし）"]
  token_hash text [not null, note: "平文は保存しない"]
  expires_at timestamptz [not null]
  used_at timestamptz [null]
  created_at timestamptz [not null, default: `now()`]

  Note: "email はアクション対象そのものなので user から導出せず保持"
}

TableGroup account [color: #E8F5E9] {
  users
  avatars
  refresh_tokens
  email_codes
  email_tokens
}

TableGroup channel [color: #E3F2FD] {
  channels
  channel_participants
  channel_entries
  blocked_users
}

TableGroup game [color: #FFF3E0] {
  games
  players
  messages
}

// 推奨インデックス（3NF 後のキーに合わせる）:

/*
CREATE UNIQUE INDEX users_email_unique
  ON users (email)
  WHERE email IS NOT NULL AND deleted_at IS NULL;

CREATE UNIQUE INDEX channel_participants_active_avatar
  ON channel_participants (channel_id, avatar_id)
  WHERE deleted_at IS NULL;

CREATE UNIQUE INDEX channel_entries_active_participant
  ON channel_entries (participant_id)
  WHERE status = 'active';

CREATE UNIQUE INDEX blocked_users_active_avatar
  ON blocked_users (channel_id, avatar_id)
  WHERE deleted_at IS NULL;

CREATE INDEX messages_room_type_created
  ON messages (room_id, message_type, created_at DESC);

-- 同一チャンネルに同一 user が複数アバターで参加できない場合の例（要検討）:
-- CREATE UNIQUE INDEX channel_participants_active_user
--   ON channel_participants (channel_id, (SELECT user_id FROM avatars a WHERE a.id = avatar_id))
--   … PostgreSQL では generated column / トリガ等で表現
*/
